--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.91",
     "framer-motion": "^11.0.24",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
