--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.91",
+    "@studio-freight/react-lenis": "^0.0.46",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.24",
     "locomotive-scroll": "^4.1.4",
