--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@splinetool/runtime": "^1.0.91",
     "@studio-freight/react-lenis": "^0.0.46",
     "axios": "^1.6.8",
+    "embla-carousel-react": "^8.0.1",
     "framer-motion": "^11.0.24",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
