--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
