--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.8",
     "embla-carousel-react": "^8.0.1",
     "framer-motion": "^11.0.24",
+    "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
