--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@portabletext/react": "^3.1.0",
+    "@sanity/client": "^6.20.1",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.91",
     "@studio-freight/react-lenis": "^0.0.46",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "embla-carousel-react": "^8.0.1",
     "framer-motion": "^11.0.24",
     "gsap": "^3.12.5",
@@ -31,6 +33,7 @@
     "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
