--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.22.3",
-    "react-use-measure": "^2.1.1"
+    "react-use-measure": "^2.1.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
